--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 <button type="submit">Submit</button>
             </form>
             <small class="Copyright"
-                >Copyright&copy; 2024 Edwardking. All rights reserved.</small
+                >Copyright&copy; 2024 . All rights reserved.</small
             >
         </div>
     </body>
